Sun Oct 23 03:26:57 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/operator_questionmark.s: Enhance.
	* commands.c (Define): Don't pass SYMBOL_DEFINE in Symbol_Define.
	* symbol.c (Symbol_Define): Make sure this can't be called
	to define area symbols.  Improve DEBUG output.
	(Symbol_CreateSymbolOutm, Symbol_OutputForAOF,
	Symbol_OutputForELF): Area symbols no longer have
	SYMBOL_DEFINED set.
	* symbol.h (SYMBOL_KIND): Update comment.
	* code.c (Code_EvalLowest): Area symbols no longer have
	SYMBOL_DEFINED set.
	* area.c (Area_Ensure, c_area): Likewise.
	* asm.c (ASM_DefineLabel): Likewise.
	* eval.c (Op_size): Support area symbols.
	* decode.c (decode): areaCurrentSymbol can not be NULL here.
	* INSTALL: Update cross-compile section.
	* reloc.c (relocFix): Improve DEBUG output.

Sat Oct 22 22:41:41 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* area.c (oArea_EntrySymbolFile, oArea_EntrySymbolLineNum): Add.
	(Area_ResetPrivateVars): Add.
	(Area_PrepareForPhase): Use Area_ResetPrivateVars.
	(c_entry): Improve error message for the 2nd occurance of ENTRY.
	(Area_MarkStartAs): Fix compiler warning.
	* decode.c (oDecodeTable): Add MEND.
	* macros.c (c_mend): Renamed to Macro_IsMENDAtInput.
	(c_macro): Follow c_mend rename.
	(c_mend): Add.
	* macros.h (c_mend): Add prototype.

Sat Oct 22 22:37:37 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* input.c (Input_ArgSub): Fix processing comments.  Fix buffer
	overflow case.

Sat Oct 22 22:29:52 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* eval.c (GetInt): Value 1 character long string should be
	handled as unsigned.
	(COMPARE): Support comparing integers and 1 character long
	strings.
	* regression/tests_pass/operator_relational.s: Enhance.

Sat Oct 22 22:22:45 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* INSTALL: Add.

Fri Oct 14 02:15:19 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* asm.c (ASM_DoPass): Break out assemble loop when longjmp is
	taken.